--- a/lab2_recipe/recipe.css
+++ b/lab2_recipe/recipe.css
@@ -41,7 +41,7 @@ p {
 
 h1, h2, h3, h4, h5{
     letter-spacing: 0.15em ;
-    font-family: Lucida Sans Unicode, Helvetica, Arial;
+    font-family: 'Lucida Sans Unicode', Helvetica, Arial;
 }
 
 h2, h3, h4, h5{
